--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@inquirer/prompts": "7.3.2",
+    "@supabase/supabase-js": "^2.91.1",
     "kleur": "4.1.5",
     "next": "14.2.12",
     "react": "18.3.1",
@@ -27,4 +28,3 @@
     "typescript": "5.7.3"
   }
 }
-
